* Added support for automatic IZPack installers
* Improved handling of recently used files and last database connections
* Improved complete compare functionality for indexes
* Bug Fixing 2513135 [ERDesignerNG] Oracle complete compare fails with date colum
* Bug Fixing 2675526 [ERDesignerNG] Generation of migration script not possible
* Bug Fixing 2615849 [ERDesignerNG] Wrong dialect is used to communicate with rep
* Bug Fixing 2504309 [ERDesignerNG] ERdesigner 1.6: problems on exit
* Bug Fixing 2675509 [ERDesignerNG] Oracle RE of indexes fails
* Bug Fixing 2616079 [ERDesignerNG] OnUpdate=Cascade not persisted
* Bug Fixing 2675551 [ERDesignerNG] DB model comparison does not work
* Bug Fixing 2675559 [ERDesignerNG] Clipping labels
* Bug Fixing 2686597 [ERDesignerNG] Used domains are deletable
* Bug Fixing 2686630 [ERDesignerNG] Default value not setable
* Bug Fixing 2686882 [ERDesignerNG] Domains not initialized
* Bug Fixing 2686627 [ERDesignerNG]  'NOT NULL' ist not generated
* Bug Fixing 2675535 [ERDesignerNG] Not possible to edit relations in subject area
* Bug Fixing 2292224 [ERDesignerNG] Comments cannot be added to Subject Areas
* Implemented FR 2581994 [ERDesignerNG] Support for function based indexes
* Implemented FR 1905364 [ERDesignerNG] Add support for views ( early alpha )
* Implemented FR 2675641 [ERDesignerNG] ESC Default buttons for dialogs
* Implemented FR 2686903 [ERDesignerNG] Store main window size
* Implemented FR 2675574 [ERDesignerNG] Resizable dialog windows
* Implemented FR 1889667 [ERDesignerNG] Allow editing of Edge Waypoints ( right click + ALT )
* Implemented FR 2686546 [ERDesignerNG] Save vs. Save As
* Implemented FR 2169348 [ERDesignerNG] Allow switching of database/dialect to generated mult. ddls
* Implemented FR 2690714 [ERDesignerNG] Add relation constraint RESTRICT
* Implemented FR 2714523 [ERDesignerNG] prompt for password before db operation
* Implemented FR 2504332 [ERDesignerNG] better comments display