@@ -167,3 +167,4 @@ Release 1.7
 * Implemented FR 2690714 [ERDesignerNG] Add relation constraint RESTRICT
 * Implemented FR 2714523 [ERDesignerNG] prompt for password before db operation
 * Implemented FR 2504332 [ERDesignerNG] better comments display
+* Implemented FR 2711884 [ERDesignerNG] Add support for hidden relationships
